@startuml ClassDiagram
class Config {
 +boundaryFraction : float
 +panSpeed : int 
 +panZoomSensitivity : float
 +zoomScale : float
 +smoothTime : float 
 +minSize : float 
 +maxSize : float
 +defaultSize : float
}

class GridPoint {
 +TileManager : parent
 +GameObject : activeTile
 +Vector2Int : coords
 -void Start() 
 -void onMouseEnter() 
 +void ChangeTile(int x, int y)
}

class TileManager {
 +GameObject : gridPoint 
 +GameObject : road0Way
 +GameObject : road2Way
 +GameObject : road3Way
 +GameObject : road4Way
 +GameObject : roadEndCap
 +GameObject : roadCorner
 +GameObject WhatRoadTileAmI(int x, int y)
 -boolean HasActiveTile(int x, int y)
}
enum TileOrientation {
    CENTER
    LEFT
    RIGHT
    TOP
    BOTTOM
    NOTHING
}


class BuildingTile {
 +StructureType structure
}
enum StructureType {
    HOUSE
    OFFICE
}

class RoadTile {
 +RoadTile : Structure
 +TileType : Type
}
enum TileType {
    Road0Way
    RoadEndCap
    Road2Way
    Road3Way
    Road4Way
    RoadCorner
}

class Structure {
 +isPermanent : boolean
 +void MakePermanent()
}

class TileGrid {
 -TitleType : grid
 +width: int
 +height : int
 +boolean InBounds(int x, int y)
 +GetNeighbors(int x, int y)
 +NeighborInfo()
}
enum TileType {
    EMPTY
    ROAD
    STRUCTURE
    OFFGRID
}


class InputManager {
 +OnCameraPan : float
 +OnCameraRoatation : float
 +OnCameraZoom : float
 +OnPlaceTile
 +OnEndPlaceTile
 -boolean isMoving()
 -void Update()
 +void OnPlace()
 +void OnMouseMovement() 
 +void OnRotation()
 +void OnZoom()
}

class CameraManager {
 +mainCamera
 +defaultRotation : int
 +defaultPosition : Vector2
 -panVelocity : Vector3
 -sizeVelocity : float
 -size : float
 +Size : float
 -rotation : int
 +Rotation : int
 void ResetSize()
 void ResetPosition()
 void ResetRotation()
 void ResetCamera()
 void RotateLeft()
 void RotateRight()
 void Update()
 void PanHandler()
 void RotationHandler()
 void ZoomHandler()
}

class GameManager {
 +inputManager : string
 +CameraManager : string
 +GridManager : string
 void Start()
 void Update()
}

class GridManager {
 +GameObject : gridPoint 
 +GameObject : road0Way
 +GameObject : road2Way
 +GameObject : road3Way
 +GameObject : road4Way
 +GameObject : roadEndCap
 +GameObject : roadCorner
 +gridSize : int
 -minGridSize : int 
 -maxGridSize : int
 -grid : TileGrid
  void Start()
  void Update()
 -CreateGround()
 -GenerateMesh()
 -void PlaceHandler()
 -void HandleCursorMovement()
 -void MakePermanant()
 -void TryCreateTemporaryRoad()
 -void RemoveTileIfTemporary()
 -GetMouseLocationOnGrid()
 -void ReplaceTile()
 -WhatBuildingTileAmI()
 -void RecalculateTile()
 +boolean RemoveTile()
 +void UpdateNeighbors()
 +WhatRoadTileAmI()
}

class EntityController {
-tileDestination : Vector2Int
-tilePosition : Vector2Int
-maxSpeed : float
-destinationTolerance : float
-Node : GameObject
-nodeDestination : GameObject
-NodeLevelPath : List
-TileLevelPath : List
void Start()
void Update()
+void MoveToNextNode()
+void InstantiateTraversal()
}

abstract class Entity {
-pos : Vector2Int
-spawnPos : Vector2Int
-destinationPos : Vector2Int
-managedObject : ManagedGameObject
-managedGameObjectLocation : string
+Entity()
+Vector3 InstantiateEntity()
+T AddComponent()
+bool RemoveComponent()
+bool TryGetComponent()
+T GetComponent()
#void AttachModelToManaged
}

class VehicleEntity {
{static} #ModelLookup : Dictionary
+Type : VehicleType
+VehicleEntity()
+String ToString()
}
enum VehicleType{
    Car
    Bus
    Van
    Bike
}
class NavPoint {
+Connections : List
}

class NavPointConnection{
-target : NavPoint
-type : ConnectionType
+NavPointConnection()
+NavPoint Target()
+ConnectionType Type()
}
enum ConnectionType {
    Directed
    Bidirectional
}

class Pathfinding {
{static} +List PathFromTo()
{static} -bool IsWalkableInDirection()
}

class PathNode {
+X : int
+Y : int
+Position : Vector2Int
+Cost : int
+Distance : int
+Parent : PathNode
+int GetDistance()
-void SetDistance()
+Vector2Int GetPosition()
+void SetPosition()
}

class PathfindingNodeInterface {
-ManagedNodeCollection : string
+ NodeCollection : NodeCollectionController
void Start()
}

class NodeCollectionController {
-NodeCollection : GameObject
-void Awake()
+GameObject GetNode()
-List FindPathToNextTile()
+NodeController GetInboundNode()
{static} -List NodeToVectorList()
{static} -List GetWalkableNodes()
}
enum TargetUser {
    Pedestrians
    Vehicles
    Both
}
enum ExitingDirection {
    NorthBound
    EastBound
    SouthBound
    WestBound
}
enum EnteringDirection {
    NorthBound
    EastBound
    SouthBound
    WestBound
}
class Node {
+Row : int
+Col : int
+Occupied : bool
+Position :Vector3
+TargetNode : Vector3
+Vector2Pos : Vector2Int
+TargetUser : TargetUser
+Parent : Node
+EnteringDirection : EnteringDirection
+ExitingDirection : ExitingDirection
+index : Tuple
}

class NodeController {
+Connections : List
-debugRadius : float
-ConnectionDictionary : Dictionary
-void OnDrawGizmos()
-void Start()
-Dictionary ConnectionListToDictionary()
+NodeController GetNodeByDirection()
-void OnDrawGizmosSelected()
}

class Connections {
+Exiting : ExitingDirection
+NC : NodeController
}

GameManager "1" --> "1"  CameraManager : contains
GameManager "1" --> "1"  InputManager : contains
GameManager "1" --> "1"  GridManager : contains
TileManager --  TileOrientation 
BuildingTile -- StructureType
TileManager "1" --* "many" GridPoint : contains
TileGrid -- TileType
RoadTile -- TileType 
RoadTile "many" *-- "1" Structure : has
VehicleEntity <|-- Entity
VehicleEntity -- VehicleType
NavPointConnection -- ConnectionType
NodeCollectionController -- TargetUser
NodeCollectionController -- EnteringDirection
NodeCollectionController -- ExitingDirection
@enduml
